app/src/main/java/com/example/bookclub/errors/AuthenticationBadRequestException.java
package com.example.bookclub.errors;

public class AuthenticationBadRequestException extends RuntimeException {
    public AuthenticationBadRequestException() {
        super("Authentication Bad Request");
    }
}
